# ant_cluster

./: base_sintetica_4_g.in  in  pyproject.toml
src/: Ant.py  Game.py  Grid.py  Map.py  ant.py  colony.py  colors.py  data.py  datatypes.py  game.py  map.py
