[tool.poetry]
name = "ant_clustering"
version = "0.1.0"
description = ""
authors = ["Ricardo Stoklosa <stoklosa.ricardo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pygame = "^2.0.1"
pygame-gui = "^0.5.7"

[tool.poetry.dev-dependencies]
black = "^21.6b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
